@@ -1,3 +1,8 @@
+2003-10-24  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* capplets/display/main.c: (create_screen_widgets): Fix
+	a leak. Closes bug #125403.
+
 Mon Sep  8 10:55:23 2003  Jonathan Blandford  <jrb@redhat.com>
 
 	* configure.in: Release 2.4.0
